# imgengine

./: .clang-format  .gitignore  FastAPI_readme.md  permanently_remove.md
.github/workflows/: ci.yml
docs/: ENGINEERING_STANDARDS.md  Suggested Build Order.md  design_patterns.md  generate final RFC PDF.md  hld.md  instructions_data.md  lld.md  maturement.txt  v2.0 RFC.md
docs/abi/: exported_symbols.json  exported_symbols.md
docs/diagrams/: job_lifecycle.mmd
imgengine/: CMakeLists.txt  L10PlusPlus.py  README.md  backpressure_removed.c  cmake-instructions.md  folder-structer.md  include_guard_check.sh  out.perf  perf.data  project_structure.md  show_module.sh
imgengine-saas/api-service/: Dockerfile
imgengine-saas/backend/: Dockerfile  pyproject.toml
imgengine-saas/backend/api-service/: pyproject.toml
imgengine-saas/backend/api-service/app/: main.py
imgengine-saas/backend/api-service/app/api/routes/: generate.py
imgengine-saas/backend/api-service/app/core/: logger.py  metrics.py  tracing.py
imgengine-saas/backend/api-service/app/models/: job.py
imgengine-saas/infra/: docker-compose.yml
imgengine-saas/worker-service/: Dockerfile  tasks.py
imgengine/arch/: arch_interface.h  cpu_caps.c  cpu_caps.h
imgengine/cli/: main.c
imgengine/cmake/: clang-format.cmake
imgengine/io/: io_vfs.h
imgengine/memory/: arena.c  arena.h  memory.h  numa.c  numa.h  slab.c  slab.h
imgengine/observability/: logger.c  logger.h  metrics.c  metrics.h
imgengine/pipeline/: batch.h  engine.h  graph.h  hardware_registry.c  (+4 more)
md/: RFC_FINAL.md
scripts/: check_headers.py
(+467 files in other folders)
